# cloto-mcp-servers

./: .gitignore  CLAUDE.md  LICENSE  README.md  glama.json  lefthook.yml  pyproject.toml  registry.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
dev-notes/: MGP_DEAD_CODE_AUDIT.md  MGP_IMPLEMENTATION_ROADMAP.md  MGP_TOOL_LATENCY_AUDIT.md  claude-desktop-cpersona-prompt.md  mgp-protocol-evaluation.md
docs/: CPERSONA_MEMORY_DESIGN.md  DISCORD_CONTEXT_SEARCH_DESIGN.md  MGP_COMMUNICATION.md  MGP_DISCOVERY.md  MGP_GUIDE.md  MGP_ISOLATION_DESIGN.md  MGP_SECURITY.md  MGP_SPEC.md
lmeb_results/all-MiniLM-L6-v2/all-MiniLM-L6-v2/: _summary.json
lmeb_results/all-MiniLM-L6-v2/all-MiniLM-L6-v2/sentence-transformers__all-MiniLM-L6-v2/8b3219a92973c328a8e22fadcfa821b5dc75636a/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  model_meta.json
lmeb_results/all-MiniLM-L6-v2/sentence-transformers__all-MiniLM-L6-v2/8b3219a92973c328a8e22fadcfa821b5dc75636a/: LoCoMo.json  model_meta.json
lmeb_results/bge-m3/bge-m3/BAAI__bge-m3/5617a9f61b028005a4858fdac845db406aefb181/: EPBench.json  KnowMeBench.json  LoCoMo.json  MemBench.json  REALTALK.json  TMD.json  model_meta.json
lmeb_results/multilingual-e5-small/multilingual-e5-small/: _summary.json
lmeb_results/multilingual-e5-small/multilingual-e5-small/intfloat__multilingual-e5-small/fd1525a9fd15316a2d503bf26ab031a61d056e98/: EPBench.json  KnowMeBench.json  LoCoMo.json  TMD.json  (+4 more)
qa/: issue-registry.json  test-baseline.json
scripts/: benchmark_cpersona.py  benchmark_cpersona_lmeb.py  benchmark_lmeb.py  benchmark_lmeb_summary.py  benchmark_trackb_lmeb.py  check-test-count.sh  resume_gemma_benchmark.sh  run_all_lmeb.sh  run_gemma_benchmark.sh  sentinel.sh  setup-deps.sh  sync-cpersona.sh  verify-issues.sh
servers/agent_utils/: pyproject.toml  server.py
servers/avatar/: Cargo.toml
servers/avatar/src/: engine.rs  main.rs  protocol.rs  tools.rs  voicevox.rs
servers/capture/: pyproject.toml  server.py
servers/cerebras/: pyproject.toml  server.py
servers/claude/: pyproject.toml  server.py
servers/common/: llm_provider.py  mcp_stream_interceptor.py  mcp_utils.py  mgp_utils.py  search.py  semantic_cache.py  validation.py
servers/cpersona/: Dockerfile  LICENSE  README.md  proxy_stdio.py  pyproject.toml  server.py  test_task_queue.py
servers/cron/: pyproject.toml  server.py
servers/deepseek/: pyproject.toml  server.py
servers/discord/: Cargo.toml
servers/discord/src/: bridge.rs  callback.rs  config.rs  handler.rs  interaction.rs  main.rs  protocol.rs  queue.rs  rate_limiter.rs  streaming.rs  tools.rs  utils.rs
servers/embedding/: download_model.py  pyproject.toml  server.py
servers/example/: pyproject.toml  server.py
servers/gaze/: gaze_engine.py  pyproject.toml  server.py
servers/groq/: pyproject.toml  server.py
servers/imagegen/: pyproject.toml  server.py
servers/local/: pyproject.toml  server.py
servers/ollama/: pyproject.toml  server.py
servers/research/: pyproject.toml  server.py
servers/stt/: pyproject.toml  server.py
servers/terminal/: pyproject.toml  server.py
servers/tests/: test_cpersona_confidence.py  test_cpersona_export_import.py  test_cpersona_limits.py  test_cpersona_quality_gate.py  test_cpersona_recall_benchmark.py  test_cpersona_scalability.py  test_embedding_cache.py  test_embedding_config.py  test_embedding_index.py  test_embedding_provider_selection.py  test_llm_provider.py  test_mcp_utils.py  test_search.py  test_semantic_cache.py  test_streaming.py  test_validation.py
servers/websearch/: pyproject.toml  server.py
tools/bench/: README.md  cpersona_ab_runner.py  cpersona_arm_switch.py  cpersona_bench_all_arms.py  cpersona_bench_setup.py  cpersona_embedding_compare.py
trackb_phase123_final/: summary.json
trackb_results/: LoCoMo.json  summary.json
trackb_results_autocal/: LoCoMo.json
trackb_results_autocal_gpu/: EPBench.json  KnowMeBench.json  LoCoMo.json  summary.json
trackb_results_cal/: LoCoMo.json  summary.json
trackb_results_cal_p5/: LoCoMo.json  summary.json
trackb_results_final/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  summary.json
trackb_results_gemma300m/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  summary.json
trackb_results_gpu_test/: LoCoMo.json  summary.json
trackb_results_phase123/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  summary.json
trackb_results_rrf/: EPBench.json  KnowMeBench.json  LoCoMo.json  LongMemEval.json  MemBench.json  REALTALK.json  TMD.json
trackb_results_t00/: LoCoMo.json  summary.json
trackb_results_t03/: LoCoMo.json
trackb_results_t03_gpu/: EPBench.json  KnowMeBench.json  LoCoMo.json  LongMemEval.json  REALTALK.json  TMD.json
trackb_verify_batch/: LoCoMo.json  summary.json
trackb_verify_fast/: LoCoMo.json  summary.json
trackb_verify_gpu/: LoCoMo.json  summary.json
trackb_verify_know/: KnowMeBench.json  summary.json
trackb_verify_preload/: LoCoMo.json  summary.json
(+1 files in other folders)
