[package]
name = "cloto-mgp-avatar"
version = "0.6.3-alpha.4"
edition = "2021"
authors = ["ClotoCore <ClotoCore@proton.me>"]
license = "BSL-1.1"
description = "MGP avatar server for VRM expression and idle behavior control"

[[bin]]
name = "mgp-avatar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ogg-opus = "0.1"
base64 = "0.22"
