[project]
name = "cloto-mcp-cron"
version = "0.1.0"
description = "Cloto MCP Server: CRON job management via kernel REST API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<1.27.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
