[package]
name = "cloto-mgp-discord"
version = "0.4.6"
edition = "2021"
authors = ["ClotoCore <ClotoCore@proton.me>"]
license = "BSL-1.1"
description = "MGP Discord bridge — bidirectional Discord communication via MGP events + MCP tools"

[[bin]]
name = "mgp-discord"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
unicode-segmentation = "1.11"
