[project]
name = "cloto-mcp-embedding"
version = "0.4.0"
description = "Cloto MCP Server: Vector embedding generation + index/search (local ONNX + API providers)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<1.27.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
onnx     = ["onnxruntime>=1.17.0", "tokenizers>=0.15.0"]
onnx-gpu = ["onnxruntime-gpu>=1.17.0", "tokenizers>=0.15.0"]
mlx      = ["mlx>=0.18.0", "mlx-embeddings>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
