[project]
name = "cloto-mcp-ollama"
version = "0.1.0"
description = "Cloto MCP Server: Local model inference via Ollama"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<1.27.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
