[project]
name = "cloto-mcp-websearch"
version = "0.1.0"
description = "Cloto MCP Server: Web search with fallback chain (SearXNG → Tavily → DuckDuckGo)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "ddgs>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
